[package]
name = "gpscfg"
authors = ["Au-Zone Technologies <info@au-zone.com>"]
repository = "https://github.com/MaivinAI/gpscfg"
license = "AGPL-3.0"
version = "0.2.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true

[dependencies]
ublox = { path = "ublox/ublox" }
serialport = "3.3.0"
clap = "2.33.3"
chrono = "0.4.15"
serde_json = "1.0.85"
